// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read original levelset: levelset 1`] = `
Object {
  "levels": Array [
    Object {
      "cells": Array [
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▧573D·< ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓8 <· ⊏⊐^▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓6v⊏⊐ ·> ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓7 >· E ▧▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ ▓▧▓ ▓ 3▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓⊓ >@ ·> ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓⊔^▓DvD▓v·▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓0 <D D< ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓596·&·5▧▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓·▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
      ],
      "demo": Uint8Array [
        100,
        0,
        227,
        25,
        38,
        8,
        180,
        240,
        226,
        240,
        48,
        241,
        17,
        132,
        0,
        241,
        1,
        0,
        180,
        240,
      ],
      "height": 24,
      "infotronsNeed": 1,
      "initialFreezeZonks": false,
      "initialGravity": false,
      "maxTitleLength": 23,
      "signature": "recorded by Min-Soo Kim, Korea.

Thanks to Herman Perk for SPEED-FIX
Thanks to Maarten (Elmer) Egmond for SPEDIT
Thanks to original SUPAPLEX creators",
      "specialPorts": Array [],
      "title": "======= QUICKY! =======",
      "width": 60,
    },
  ],
  "levelsCount": 1,
}
`;

exports[`writeLevelset level height extend 1`] = `
Object {
  "cells": Array [
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
  ],
  "demo": null,
  "height": 24,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": Array [],
  "title": "                       ",
  "width": 60,
}
`;

exports[`writeLevelset level size extend 1`] = `
Object {
  "cells": Array [
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓         ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓                                                          ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
  ],
  "demo": null,
  "height": 24,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": Array [],
  "title": "                       ",
  "width": 60,
}
`;

exports[`writeLevelset level width extend 1`] = `
Object {
  "cells": Array [
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓                                                ▓         ▓",
    "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
  ],
  "demo": null,
  "height": 24,
  "infotronsNeed": 0,
  "initialFreezeZonks": false,
  "initialGravity": false,
  "maxTitleLength": 23,
  "signature": null,
  "specialPorts": Array [],
  "title": "                       ",
  "width": 60,
}
`;

exports[`writeLevelset remove extra levels 1`] = `
Object {
  "levels": Array [
    Object {
      "cells": Array [
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓                                                          ▓",
        "▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓",
      ],
      "demo": Uint8Array [
        10,
        20,
        30,
        40,
        50,
        60,
      ],
      "height": 24,
      "infotronsNeed": 0,
      "initialFreezeZonks": false,
      "initialGravity": false,
      "maxTitleLength": 23,
      "signature": null,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 60,
    },
  ],
  "levelsCount": 1,
}
`;
